# bb-portal

./: .bazelignore  .bazelrc  .common.bazelrc  .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  Makefile  README.md  generate.go  go.mod  go.sum  gqlgen.yml  sqlc.yaml
cmd/bb-portal/: BUILD.bazel  main.go
cmd/bb_export_schema/: BUILD.bazel  main.go
cmd/bb_portal/: BUILD.bazel  grpcweb_proxy_server.go  main.go  portal_service.go
cmd/bb_seed/: BUILD.bazel  main.go
ent/authschema/: BUILD.bazel  privacy.go  privacy_test.go  schema.go
ent/schema/: BUILD.bazel  README.md  action.go  actioncachestatistics.go  actiondata.go  actionsummary.go  artifactmetrics.go  authenticateduser.go  bazelinvocation.go  bazelinvocationproblem.go  blob.go  build.go  buildgraphmetrics.go  buildlogchunk.go  buildtag.go  buildtoollog.go  configuration.go  connectionmetadata.go  cumulativemetrics.go  digest.go  dynamicexecutionmetrics.go  evaluationstat.go  eventfile.go  eventmetadata.go  executioninfo.go  file.go  filepath.go  filesmetric.go  garbagemetrics.go  incompleteartifactgraph.go  incompletebuildlog.go  instancename.go  invocationartifactgraph.go  invocationfiles.go  invocationtag.go  invocationtarget.go  memorymetrics.go  metrics.go  missdetail.go  mixin.go  (+25 more)
frontend/: .env  .gitignore  BUILD.bazel  Dockerfile  biome.json  create-possible-types.js  index.html  next.bzl  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.bzl  vite.config.ts  vitest.config.mts
frontend/patches/: vite.patch
frontend/scripts/: grpc-client-gen.sh
frontend/src/: globals.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/app/: globals.css  layout.module.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/context/: GrpcClientsContext.tsx  GrpcClientsProvider.tsx  MessageContext.tsx  MessageProvider.tsx
frontend/src/graphql/: BUILD.bazel  codegen.ts
frontend/src/grpc/: actionCacheClient.ts  buildQueueStateClient.ts  casByteStreamClient.ts  fileSystemAccessCacheClient.ts  initialSizeClassCacheClient.ts
frontend/src/lib/: dayjs.ts
frontend/src/routes/: __root.tsx  bazel-invocations.$invocationID.tsx  bazel-invocations.index.tsx  bazel-invocations.tsx  browser.$.tsx  browser.index.tsx  browser.tsx  builds.$buildUUID.tsx  builds.index.tsx  builds.tsx  index.tsx  operations.$operationID.tsx  operations.index.tsx  operations.tsx  scheduler.index.tsx  scheduler.tsx  scheduler.worker.tsx  targets.$targetID.index.tsx  targets.$targetID.tests.tsx  targets.index.tsx  targets.tsx  tests.index.tsx  tests.tsx  trends.tsx  users.$userUUID.tsx
frontend/src/splash/: splash.css  splash.html  splash.js
frontend/src/test/: setup.ts
frontend/src/theme/: dark.tsx  light.tsx  shared.tsx  theme.module.css
frontend/src/types/: BrowserPageType.ts  FileSystemAccessProfileReference.ts  GraphqlFileFragment.ts  ListWorkerFilterType.ts  TableColumnTypeWithFilter.ts  TestStatus.ts  protobufTypeUrls.ts
frontend/src/utils/: applyColumnFilters.ts  bloomFilter.test.ts  bloomFilter.ts  commandLineDataToString.ts  digestFunctionUtils.test.ts  digestFunctionUtils.ts  env.ts  featureGuard.ts  fetchCasObject.ts  filesize.ts  formatValues.ts  generatePageTitle.ts  getBbClientdPath.ts  grpcErrorCodes.ts  grpcStatus.ts  isFeatureEnabled.ts  navigation.tsx  parseBrowserPageSlug.test.ts  parseBrowserPageSlug.ts  parseGraphqlEdgeList.ts  protobufToObject.ts  screen.ts  shouldPollInvocation.ts  storage.ts  time.ts  urlGenerator.ts
frontend/tools/: create-possible-types.js  grpc-client-gen.sh
internal/api/: BUILD.bazel  bep_upload.go  blob_handler.go
internal/api/common/: BUILD.bazel  common.go  common_test.go
internal/api/grpc/: BUILD.bazel  server.go
internal/api/grpcweb/: BUILD.bazel  common.go  common_test.go
internal/api/servefiles/: BUILD.bazel  serve_tarball.go  server.go
internal/bep/: BUILD.bazel  bep_service.go
internal/database/: BUILD.bazel  database.go  savepoint_driver.go  transaction.go
internal/database/buildeventrecorder/: BUILD.bazel  artifact_graph_buffer.go  artifact_graph_buffer_test.go  batcher.go  besfileutils.go  build_event_recorder.go  build_event_recorder_test.go  buildeventrecorder.go  filter_handled_events.go  handled_events.go  metrics_build_event_recorder.go  min_duration_build_event_recorder.go  save.go  saveActionExecuted.go  saveBuildConfiguration.go  saveBuildFinished.go  saveBuildMetadata.go  saveBuildMetrics.go  (+27 more)
internal/graphql/: BUILD.bazel  artifact_download_url.go  artifact_download_url_test.go  artifact_graph.go  custom.resolvers.go  ent.resolvers.go  graphql_helpers_test.go  graphql_service_test.go  resolver.go  server.go  server_gen.go
internal/mock/: BUILD.bazel
pkg/archive/: BUILD.bazel  blob_multi_archiver.go  blob_multi_archiver_test.go  configuration.go  local_file_archiver.go
pkg/auth/: BUILD.bazel  credentials_helper.go
pkg/authmetadataextraction/: BUILD.bazel  authmetadataextraction.go  authmetadataextraction_test.go  testutils.go
pkg/cas/: BUILD.bazel  client.go
pkg/events/: BUILD.bazel  doc.go  reader.go  reader_test.go
pkg/frontend/: BUILD.bazel  embedded.go  frontend.go  spa_file_system.go
pkg/invocationmetadataextraction/: BUILD.bazel  metadata_extraction.go  metadata_extraction_test.go
pkg/processing/: BUILD.bazel  archive.go  doc.go  save.go  summarize.go  workflow.go  workflow_test.go
pkg/prometheus_metrics/: BUILD.bazel  metrics.go  metrics_test.go
pkg/summary/: BUILD.bazel  doc.go  env.go  summarizer.go  summarizer_test.go  summary.go
pkg/testkit/: BUILD.bazel  golden.go  graphql.go
pkg/uuidgql/: BUILD.bazel  uuidgql.go
test/integrationtest/: BUILD.bazel  artifact_graph_test.go  integration_test.go  types_test.go  util_test.go
test/testutils/: BUILD.bazel  testutils.go
tools/: BUILD.bazel  container.bzl  local_repositories.bzl  protobuf.bzl  reformat.sh  sqllitebrowser.sh  update_schema.sh  workflows_template.libsonnet
tools/db/: BUILD.bazel  Dockerfile  cronjob.yml  db_cleanup.go  db_cleaup_test.go  readme.md
tools/github_workflows/: BUILD.bazel  github_workflows.jsonnet
(+739 files in other folders)
