# gazelle:ignore
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:exclude frontend/src/proto
# gazelle:exclude pkg/proto/bazelbuild/bazel
# gazelle:go_grpc_compilers @rules_go//proto:go_proto,@rules_go//proto:go_grpc_v2
# gazelle:prefix github.com/buildbarn/bb-portal
# gazelle:go_naming_convention_external import
# gazelle:proto_import_prefix github.com/buildbarn/bb-portal
# gazelle:resolve go github.com/bazelbuild/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto //pkg/proto/bazelbuild/bazel/bes:build_event_stream
# gazelle:resolve go github.com/bazelbuild/bazel/src/main/java/com/google/devtools/build/lib/packages/metrics //pkg/proto/bazelbuild/bazel/metrics:package_load_metrics
# gazelle:resolve go github.com/bazelbuild/bazel/src/main/protobuf //pkg/proto/bazelbuild/bazel/protobuf:src_main_protobuf
# gazelle:resolve proto go build/bazel/remote/execution/v2/remote_execution.proto @bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto
# gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status
# gazelle:resolve proto build/bazel/remote/execution/v2/remote_execution.proto @bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto
# gazelle:resolve go github.com/buildbarn/bb-portal/pkg/proto/configuration/bb_portal //pkg/proto/configuration/bb_portal
# gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto

# gazelle:resolve_regexp proto github.com/buildbarn/bb-storage/(.*)/(.*)\.proto @com_github_buildbarn_bb_storage//$1:${2}_proto
# gazelle:resolve_regexp proto go github.com/buildbarn/bb-storage/(.*)/(.*)\.proto @com_github_buildbarn_bb_storage//$1:$2
# gazelle:resolve_regexp proto google/protobuf/(.*)\.proto @protobuf//:${1}_proto
gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)
