"""
    Build rules for buildbarn portal
"""

module(name = "com_github_buildbarn_bb_portal")

bazel_dep(name = "bazel_protos")
local_path_override(
    module_name = "bazel_protos",
    path = "third_party/bazel",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
bazel_dep(name = "bazel_remote_apis", version = "0.0.0")
bazel_dep(name = "com_github_buildbarn_bb_browser")
bazel_dep(name = "com_github_buildbarn_bb_remote_execution")
bazel_dep(name = "com_github_buildbarn_bb_storage")
bazel_dep(name = "com_github_buildbarn_go_xdr")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "googleapis", version = "0.0.0-20250703-f9d6fe4a")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "rules_jsonnet", version = "0.7.2")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "opentelemetry-proto", version = "1.7.0")

git_override(
    module_name = "bazel_remote_apis",
    commit = "9ef19c6b5fbf77d6dd9d84d75fbb5a20a6b62ef1",
    remote = "https://github.com/bazelbuild/remote-apis.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_browser",
    commit = "9b44996f7d6a04185f61e7752cbe8649aaa59f16",
    remote = "https://github.com/buildbarn/bb-browser.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_remote_execution",
    commit = "947d8e2c5019e83da7e5b30797956e417b6fa160",
    remote = "https://github.com/buildbarn/bb-remote-execution.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_storage",
    commit = "89b92028196937d1fb26a589637bdf8a3340d81f",
    patches = [
        "//:patches/com_buildbarn_bb_storage/base_image.diff",
        "//:patches/com_buildbarn_bb_storage/workflows_template.diff",
    ],
    remote = "https://github.com/buildbarn/bb-storage.git",
)

git_override(
    module_name = "com_github_buildbarn_go_xdr",
    commit = "236788cf9e8948a1e8875c7dd243e2be180cdfd7",
    remote = "https://github.com/buildbarn/go-xdr.git",
)

git_override(
    module_name = "rules_antlr",
    commit = "89a29cca479363a5aee53e203719510bdc6be6ff",
    patches = [
        "//:patches/rules_antlr/antlr-4.10.diff",
        "//:patches/rules_antlr/bzlmod.diff",
    ],
    remote = "https://github.com/marcohu/rules_antlr.git",
)

single_version_override(
    module_name = "gazelle",
    patches = ["//:patches/gazelle/dont-flatten-srcs.diff"],
)

single_version_override(
    module_name = "jsonnet",
    patches = ["//:patches/jsonnet/bazel-8.diff"],
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_override(
    build_file_generation = "on",
    path = "github.com/cncf/xds/go",
)
go_deps.module_override(
    patches = [
        "@com_github_buildbarn_bb_remote_execution//:patches/com_github_hanwen_go_fuse_v2/direntrylist-offsets-and-testability.diff",
        "@com_github_buildbarn_bb_remote_execution//:patches/com_github_hanwen_go_fuse_v2/writeback-cache.diff",
        "@com_github_buildbarn_bb_remote_execution//:patches/com_github_hanwen_go_fuse_v2/notify-testability.diff",
    ],
    path = "github.com/hanwen/go-fuse/v2",
)
go_deps.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/org_golang_x_sys/o-search.diff"],
    path = "golang.org/x/sys",
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "com_github_99designs_gqlgen",
    "com_github_bazelbuild_bazel_src_main_java_com_google_devtools_build_lib_buildeventstream_proto",
    "com_github_bazelbuild_bazel_src_main_java_com_google_devtools_build_lib_packages_metrics",
    "com_github_bazelbuild_bazel_src_main_protobuf",
    "com_github_bazelbuild_buildtools",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_hashicorp_go_multierror",
    "com_github_hedwigz_entviz",
    "com_github_improbable_eng_grpc_web",
    "com_github_jackc_pgx_v5",
    "com_github_jmespath_go_jmespath",
    "com_github_machinebox_graphql",
    "com_github_mattn_go_sqlite3",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_rs_cors",
    "com_github_stretchr_testify",
    "com_github_vektah_gqlparser_v2",
    "io_entgo_contrib",
    "io_entgo_ent",
    "org_golang_google_api",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_bytestream",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_lint",
    "org_golang_x_sync",
    "org_uber_go_mock",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_version = "14.0.0",
)
use_repo(llvm, "llvm_toolchain_llvm")
