load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb-portal_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-portal/cmd/bb-portal",
    visibility = ["//visibility:private"],
    deps = [
        "//ent/gen/ent",
        "//ent/gen/ent/migrate",
        "//internal/api",
        "//internal/api/grpc",
        "//internal/graphql",
        "//pkg/cas",
        "//pkg/processing",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/handler/debug",
        "@com_github_99designs_gqlgen//graphql/playground",
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@io_entgo_contrib//entgql",
    ],
)

go_binary(
    name = "bb-portal",
    embed = [":bb-portal_lib"],
    visibility = ["//visibility:public"],
)
