load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//tools:container.bzl", "container_push")

go_library(
    name = "bb_portal_lib",
    srcs = [
        "grpcweb_proxy_server.go",
        "main.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/cmd/bb_portal",
    visibility = ["//visibility:private"],
    deps = [
        "//ent/gen/ent",
        "//ent/gen/ent/migrate",
        "//ent/gen/ent/runtime",
        "//internal/api/grpc/bes",
        "//internal/api/grpcweb/buildqueuestateproxy",
        "//internal/api/http/bepuploader",
        "//internal/api/servefiles:servefiles_lib",
        "//internal/database",
        "//internal/database/common",
        "//internal/database/dbauthservice",
        "//internal/database/dbcleanupservice",
        "//internal/graphql",
        "//pkg/processing",
        "//pkg/prometheus_metrics",
        "//pkg/proto/configuration/bb_portal",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_99designs_gqlgen//graphql/playground",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/buildqueuestate",
        "@com_github_buildbarn_bb_storage//pkg/auth/configuration",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/grpcservers",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/http/server",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/auth",
        "@com_github_buildbarn_bb_storage//pkg/proto/fsac",
        "@com_github_buildbarn_bb_storage//pkg/proto/iscc",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@com_github_improbable_eng_grpc_web//go/grpcweb",
        "@com_github_rs_cors//:cors",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_genproto//googleapis/devtools/build/v1:build",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

multiarch_go_image(
    name = "bb_portal_container",
    binary = ":bb_portal",
)

container_push_official(
    name = "bb_portal_container_push",
    component = "bb-portal-backend",
    image = ":bb_portal_container",
)

go_binary(
    name = "bb_portal",
    embed = [":bb_portal_lib"],
    visibility = ["//visibility:public"],
)
