load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_portal_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-portal/cmd/bb_portal",
    visibility = ["//visibility:private"],
    deps = [
        "//ent/gen/ent/runtime",
        "//internal/bep",
        "//pkg/frontend",
        "//pkg/grpcweb/blobstoreservice",
        "//pkg/grpcweb/schedulerservice",
        "//pkg/proto/configuration/bb_portal",
        "@com_github_buildbarn_bb_storage//pkg/auth/configuration",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/http/server",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_gorilla_mux//:mux",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gorilla_mux_otelmux//:otelmux",
        "@io_opentelemetry_go_otel//:otel",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

multiarch_go_image(
    name = "bb_portal_container",
    binary = ":bb_portal",
)

container_push_official(
    name = "bb_portal_container_push",
    component = "bb-portal",
    image = ":bb_portal_container",
)

go_binary(
    name = "bb_portal",
    embed = [":bb_portal_lib"],
    visibility = ["//visibility:public"],
)
